src/app/snapshots/thurbox__app__acceptance__empty_welcome_screen_renders.snap
---
source: src/app/acceptance.rs
expression: h.render()
---
 thurbox  Multi-Session Agent Orchestrator  v0.0.0-dev                                    ◐ Default
╭ Sessions ─────────────╮┌ No Session ─────────────────────────────────────────────────────────────┐
│                       ││                                                                         │
│    No sessions yet    ││                                                                         │
│Press Ctrl+N to create ││                                                                         │
│                       ││                                                                         │
│  See the main panel   ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││            ┌────────────────────────────────────────────────┐           │
│                       ││            │No active sessions                              │           │
│                       ││            │                                                │           │
│                       ││            │  Ctrl+N   New session                          │           │
│                       ││            │  F1       Help                                 │           │
│                       ││            │                                                │           │
│                       ││            │  Hosts        add SSH/WSL in hosts.toml        │           │
│                       ││            │  Extensions   thurbox-cli extension available  │           │
│                       ││            │  Themes       Ctrl+Y                           │           │
│                       ││            │  Config       ~/.config/thurbox                │           │
│                       ││            │  Docs         github.com/Thurbeen/thurbox      │           │
│                       ││            └────────────────────────────────────────────────┘           │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
╰───────────────────────╯│                                                                         │
┌ Automations ──────────┐│                                                                         │
│none                   ││                                                                         │
└───────────────────────┘└─────────────────────────────────────────────────────────────────────────┘
 Sessions  Help · F1 s Info · F2 c Files · F3   Theme · F4   Tasks · F5   Settings · F6   Quit · ^Q
