src/app/snapshots/thurbox__app__acceptance__help_overlay_lists_keybindings.snap
---
source: src/app/acceptance.rs
expression: h.render()
---
 thurbox  Multi-Session Agent Orchestrator  v0.0.0-dev                                    ◐ Default
╭ Sessions ─────────────╮┌ No Session ─────────────────────────────────────────────────────────────┐
│                       ││                                                                         │
│    No sessions yet    ││                                                                         │
│Press Ctrl+N to create ││                                                                         │
│                   ╭ Keybindings ─────────────────────────────────────────────╮                   │
│                   │Navigation                                               ▲│                   │
│                   │› ctrl+h          Focus previous pane                    █│                   │
│                   │  ctrl+l          Focus next pane                        █│                   │
│                   │  ctrl+j          Next session                           █│                   │
│                   │  ctrl+k          Previous session                       ║│                   │
│                   │                                                         ║│                   │
│                   │Sessions                                                 ║│                   │
│                   │  ctrl+n          New session                            ║│                   │
│                   │  ctrl+d          Delete session                         ║│                   │
│                   │  ctrl+r          Restart session                        ║│                   │
│                   │  ctrl+f          Fork session                           ║│                   │
│                   │  ctrl+p          Automations                            ║│                   │
│                   │  ctrl+w / f5     Tasks                                  ║│                   │
│                   │  ctrl+z          Undo delete                            ║│                   │
│                   │  ctrl+u          Restore deleted sessions               ║│                   │
│                   │                                                         ║│                   │
│                   │Project                                                  ║│                   │
│                   │  ctrl+o          Open in editor                         ▼│                   │
│                   │j/k move · r rebind · d reset           Reset all   Close │                   │
╰───────────────────╰──────────────────────────────────────────────────────────╯                   │
╭ Automations ──────────╮│                                                                         │
│none                   ││                                                                         │
╰───────────────────────╯└─────────────────────────────────────────────────────────────────────────┘
 Sessions  Help · F1   Info · F2   Files · F3   Theme · F4   Tasks · F5   Settings · F6   Quit · ^Q
