src/app/snapshots/thurbox__app__acceptance__repo_picker_browse_view_renders.snap
---
source: src/app/acceptance.rs
expression: rendered
---
 thurbox  Multi-Session Agent Orchestrator  v0.0.0-dev                                    ◐ Default
╭ Sessions ─────────────╮┌ No Session ─────────────────────────────────────────────────────────────┐
│                       ││                                                                         │
│    No sessions yet    ││                                                                         │
│Press Ctrl+N to create ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│           ╭ New Session · repos ─────────────────────────────────────────────────────╮           │
│           │┌ <dir> ───────────────┐┌ Selected (0) ───────────────┐│           │
│           ││⮤ ..                                     ││  a / Space to add           ││           │
│           ││● alpha (repo)                           ││                             ││           │
│           ││▸ beta                                [+]││                             ││           │
│           │└─────────────────────────────────────────┘└─────────────────────────────┘│           │
│           │┌ Go to path ────────────────────────────────────────────────────────────┐│           │
│           ││                                                                        ││           │
│           │└────────────────────────────────────────────────────────────────────────┘│           │
│           │j/k nav  Enter/l open  Bksp up  a/Spc add  / filter  Tab pa Done   Cancel │           │
│           ╰──────────────────────────────────────────────────────────────────────────╯           │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
╰───────────────────────╯│                                                                         │
┌ Automations ──────────┐│                                                                         │
│none                   ││                                                                         │
└───────────────────────┘└─────────────────────────────────────────────────────────────────────────┘
 Sessions  0 session(s Help · F1 c Tasks · F5   Files · F3   Settings · F6   Theme · F4   Quit · ^Q
