src/app/snapshots/thurbox__app__acceptance__repo_picker_path_browser_snapshot.snap
---
source: src/app/acceptance.rs
expression: h.render()
---
 thurbox  Multi-Session Agent Orchestrator  v0.0.0-dev                                    ◐ Default
╭ Sessions ─────────────╮┌ No Session ─────────────────────────────────────────────────────────────┐
│                       ││                                                                         │
│    No sessions yet    ││                                                                         │
│Press Ctrl+N to create ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                   ╭ Select Repos ────────────────────────────────────────────╮                   │
│                   │┌ Repos (0) ─────────────────────────────────────────────┐│                   │
│                   ││  No bookmarks — add via path input below               ││                   │
│                   │└────────────────────────────────────────────────────────┘│                   │
│                   │┌ Add Repo Path ─────────────────────────────────────────┐│                   │
│                   ││~/code/                                                 ││                   │
│                   │└────────────────────────────────────────────────────────┘│                   │
│                   │┌ Browse ~/code ─────────────────────────────────────────┐│                   │
│                   ││ alpha/ ●git                                            ││                   │
│                   ││ notes/                                                 ││                   │
│                   │└────────────────────────────────────────────────────────┘│                   │
│                   │↑/↓ select  Enter open/pick  Tab refresh    Done   Cancel │                   │
│                   ╰──────────────────────────────────────────────────────────╯                   │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
│                       ││                                                                         │
╰───────────────────────╯└─────────────────────────────────────────────────────────────────────────┘
 Sessions  Help · F1   Info · F2   Files · F3   Theme · F4   Tasks · F5   Settings · F6   Quit · ^Q
