src/app/snapshots/thurbox__app__acceptance__theme_picker_lists_palettes.snap
---
source: src/app/acceptance.rs
expression: h.render()
---
 thurbox  Multi-Session Agent Orchestrator  v0.0.0-dev                                    ◐ Default
╭ Sessions ─────────────╮┌ No Session ─────────────────────────────────────────────────────────────┐
│                       ││                                                                         │
│    No sessions y╭ Theme ───────────────────────────────────────────────────────╮                 │
│Press Ctrl+N to c│ / filter themes                                 36/36 themes │                 │
│                 │ Dark                      ▲  Accent      █████ █████         │                 │
│                 │▸ Default                  █  Status      ◐ ◆ ● ○ ✗           │                 │
│                 │  Catppuccin Mocha         █  Text        Aa Aa Aa            │                 │
│                 │  Tokyo Night              █  Diff         +   -              │                 │
│                 │  Gruvbox Dark             █  Border      ╭─────╮             │                 │
│                 │  Doom                     █  Modal bg                        │                 │
│                 │  Nord                     █                                  │                 │
│                 │  Dracula                  █                                  │                 │
│                 │  One Dark                 ║                                  │                 │
│                 │  Rosé Pine Moon           ║                                  │                 │
│                 │  Everforest               ║                                  │                 │
│                 │  Kanagawa                 ║                                  │                 │
│                 │  Solarized Dark           ║                                  │                 │
│                 │  Monokai                  ║                                  │                 │
│                 │  Ayu Dark                 ║                                  │                 │
│                 │  Ayu Mirage               ║                                  │                 │
│                 │  Material                 ║                                  │                 │
│                 │  Rosé Pine                ║                                  │                 │
│                 │  Oxocarbon                ║                                  │                 │
│                 │  GitHub Dark              ▼                                  │                 │
╰─────────────────│  theme id: default                                           │                 │
╭ Automations ────│j/k navigate  PgUp/PgDn page  / filter        Select   Cancel │                 │
│none             ╰──────────────────────────────────────────────────────────────╯                 │
╰───────────────────────╯└─────────────────────────────────────────────────────────────────────────┘
 Sessions  Help · F1   Info · F2   Files · F3   Theme · F4   Tasks · F5   Settings · F6   Quit · ^Q
